--- a/app/assets/stylesheets/what_is_furnitsy.css
+++ b/app/assets/stylesheets/what_is_furnitsy.css
@@ -73,6 +73,7 @@
     padding-right: 9px;
     margin-bottom: 36px;
     margin-top: 10px;
+    color: #222222;
     background-color: #eeb161;
 }
 
